<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Reader</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="logo_ilearnrw">iLearnRw</string>
    <string name="no_data">No data</string>
    <string name="item_exists_do_copy">Item already exists in your library. Overwrite the file?</string>
    <string name="remember_me">Remember me</string>
    <string name="format_library">Format library?</string>
    <string name="more_info">More Information</string>

    <!-- Activity titles -->
    <string name="title_activity_reader">ReaderActivity</string>
    <string name="title_presentation_module">PresentationModule</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_mode">ModeActivity</string>
    <string name="title_activity_rename">RenameActivity</string>
    <string name="title_activity_add_to_device_explorer">AddToDevice - Explorer</string>
    <string name="title_activity_add_to_device_orb">AddToDevice - Online Resource Bank</string>
    <string name="title_reader_settings">ReaderSettings</string>
    
    <!-- Login activity -->
    <string name="username">Username :</string>
    <string name="password">Password :</string>
    <string name="login_username_hint">Enter your username</string>
    <string name="login_password_hint">Enter your password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>

    <!-- Library activity -->
    <string name="title_activity_library">LibraryActivity</string>
    <string name="library_add">Add new item to library</string>
    <string name="library_location">Library</string>
    <string name="library_remove_item_confirmation">Are you sure you want to remove\u0020</string>
    <string name="dialog_title_add_to_device">Add to Device from</string>
    
    <string-array name="library_context_menu">
        <item>Edit</item>
        <item>Delete</item>
        <item>Copy</item>
    </string-array>
    
    <string-array name="add_to_device_array">
	    <item>Device storage</item>
	    <item>Online Resource Bank</item>	
    </string-array>
    
    <!-- Reader activity -->
	<string name="content_descr_btn_lib">Back to library</string>
	<string name="content_descr_btn_mode">Change mode</string>
	<string name="content_descr_btn_next">Next sentence</string>
	<string name="content_descr_btn_play">Play</string>
	<string name="content_descr_btn_previous">Previous sentence</string>
	<string name="content_descr_btn_search">Search</string>
	<string name="content_descr_btn_settings">Settings</string>
	
	<string name="mode_listen">Listen</string>
	<string name="mode_highlight">Guidance</string>
	<string name="mode_chunking">Chunking</string>
	
	<string name="reader_highlight_speed_title">Speed</string>
	<string name="reader_highlight_speed_value">5.0/10.0</string>
	
	
	
	<!-- Add to device Explorer -->
	<string name="add_to_device_explorer_copy_confirm_start">Copy\u0020</string>
	<string name="add_to_device_explorer_copy_confirm_end">\u0020to your library?</string>
	
	
	<string name="color_picker">Choose a color</string>

</resources>
