<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/login_container"
    android:orientation="vertical">
    
    <LinearLayout 
        android:id="@+id/login_image_container"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="vertical">
        
        <ImageView 
            android:id="@+id/login_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_ilearnrw"
            android:contentDescription="@string/logo_ilearnrw" 
            android:layout_gravity="center_horizontal"/>
        
    </LinearLayout>
    
    <LinearLayout 
        android:id="@+id/login_body"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="2"
        android:orientation="vertical"
        android:baselineAligned="false">
        
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"/>
        
        <EditText
            android:id="@+id/login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_username_hint"
            android:inputType="text"
            android:maxLines="1"/>
        
        <TextView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"/>
        
        <EditText 
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/login_password_hint"
            android:maxLines="1"/>

        <CheckBox
            android:id="@+id/chk_remember_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_me" />
        
        <Button 
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/login"/>
        
        <Button
            android:id="@+id/login_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/spacer_8"
            android:text="@string/logout"/>      
        
    </LinearLayout>
    
</LinearLayout>
