<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:paddingRight="10dp">

    <RadioButton
        android:id="@+id/rdbtn_mode_listen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mode_listen"
        android:onClick="onRadioButtonClicked" />

    <RadioButton
        android:id="@+id/rdbtn_mode_highlight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mode_highlight"
        android:onClick="onRadioButtonClicked" />
    
    <RadioButton
        android:id="@+id/rdbtn_mode_chunking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mode_chunking"
        android:onClick="onRadioButtonClicked" />

</RadioGroup>
