<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/reader_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:baselineAligned="false">
    
    <RelativeLayout 
        android:id="@+id/reader_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/LightGrey"
        android:layout_alignParentTop="true">
        
        <ImageButton 
	        android:id="@+id/ibtn_lib_reader"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        style="?android:attr/buttonBarButtonStyle"
	        android:src="@drawable/lib"
	        android:contentDescription="@string/content_descr_btn_lib"
	        android:layout_alignParentLeft="true"/>
        
        <ImageButton 
	        android:id="@+id/ibtn_search_reader"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        style="?android:attr/buttonBarButtonStyle"
	        android:src="@drawable/search"
	        android:contentDescription="@string/content_descr_btn_search"
	        android:layout_toRightOf="@id/ibtn_lib_reader"/>
        
        <RelativeLayout
        android:id="@+id/search_buttons_layout"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:background="@color/LightGrey"
        android:gravity="center_vertical"
        android:layout_toRightOf="@id/ibtn_search_reader"
        android:layout_marginTop="10dp">
        
	        <ImageButton
	            android:id="@+id/ibtn_search_back"
	            android:layout_height="wrap_content"
	            android:layout_width="wrap_content"
	            style="?android:attr/buttonBarStyle"
	            android:src="@drawable/search_prev_image_selector"
	            android:contentDescription="@string/content_descr_btn_settings"/>
	        
	        <ImageButton
	            android:id="@+id/ibtn_search_forward"
	            android:layout_height="wrap_content"
	            android:layout_width="wrap_content"
	            style="?android:attr/buttonBarStyle"
	            android:src="@drawable/search_next_image_selector"
	            android:contentDescription="@string/content_descr_btn_settings"
	            android:layout_marginLeft="5dp"
	            android:layout_toRightOf="@id/ibtn_search_back"/>
        </RelativeLayout>
    
        
        <TextView 
	        android:id="@+id/tv_book_title_reader"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="Book Title"
	        android:layout_toRightOf="@id/search_buttons_layout"
	        android:layout_alignParentRight="true"
	        android:gravity="center_horizontal"
	        android:textSize="40sp"/>
        
	</RelativeLayout>
    
    <RelativeLayout 
        android:id="@+id/reader_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/reader_top"
        android:layout_above="@+id/reader_bottom"
        android:layout_toLeftOf="@+id/reader_body_highlight_speed">
        <WebView 
	        android:id="@+id/webview_reader"
	        android:layout_width="match_parent"	
	        android:layout_height="match_parent"/>        
        
	</RelativeLayout>
	
	<RelativeLayout 
	    android:id="@+id/reader_body_highlight_speed"
	    android:layout_width="wrap_content"
	    android:layout_height="match_parent"
	    android:layout_below="@id/reader_top"
	    android:layout_above="@+id/reader_bottom"
	    android:layout_alignParentRight="true">
	    
	    <TextView 
	        android:id="@+id/tv_highlight_speed_title"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/reader_highlight_speed_title"
	        android:layout_alignParentTop="true"
	        android:gravity="center_horizontal"/>
	    
	    <TextView 
	        android:id="@+id/tv_highlight_speed_value"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	       	android:text="@string/reader_highlight_speed_value"
	       	android:layout_below="@id/tv_highlight_speed_title"
	       	android:gravity="center_horizontal"/>
	    
	    <com.example.reader.types.VerticalSeekBar 
			android:id="@+id/seekbar_highLight_speed"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:max="100"
			android:progress="50"
			android:layout_below="@id/tv_highlight_speed_value"/>
	</RelativeLayout>

	
	 
	<RelativeLayout 
        android:id="@+id/reader_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/LightGrey"
        android:layout_alignParentBottom="true">
	    
	    <ImageButton 
	        android:id="@+id/ibtn_mode_reader"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        style="?android:attr/buttonBarButtonStyle"
	       	android:src="@drawable/mode"
	        android:contentDescription="@string/content_descr_btn_mode"
	        android:layout_alignParentLeft="true"
	        android:layout_marginTop="10dp"
	        android:layout_marginBottom="5dp"/>
	    
		<ImageButton 
	        android:id="@+id/ibtn_settings_reader"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        style="?android:attr/buttonBarButtonStyle"
	        android:src="@drawable/settings"
	        android:contentDescription="@string/content_descr_btn_settings"
	        android:layout_alignParentRight="true"
	        android:layout_marginTop="10dp"
	        android:layout_marginBottom="5dp"/>
		
			    
		<LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@id/ibtn_mode_reader"
	        android:layout_toLeftOf="@id/ibtn_settings_reader" >
	        
	        <ImageButton 
		        android:id="@+id/ibtn_prev_reader"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        style="?android:attr/buttonBarButtonStyle"
		        android:src="@drawable/previous"
		        android:contentDescription="@string/content_descr_btn_previous"
		        android:layout_weight="1"
		        android:layout_marginTop="10dp"
		        android:layout_marginBottom="5dp"/>
		
			<ImageButton 
		        android:id="@+id/ibtn_play_reader"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        style="?android:attr/buttonBarButtonStyle"
		        android:src="@drawable/play"
		        android:contentDescription="@string/content_descr_btn_play"
		        android:layout_weight="1"
		        android:layout_marginTop="10dp"
		        android:layout_marginBottom="5dp"/>
		
			<ImageButton 
		        android:id="@+id/ibtn_next_reader"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        style="?android:attr/buttonBarButtonStyle"
		       	android:src="@drawable/next"
		        android:contentDescription="@string/content_descr_btn_next"
		        android:layout_weight="1"
		        android:layout_marginTop="10dp"
		        android:layout_marginBottom="5dp"/>
			
	    </LinearLayout>
	</RelativeLayout>

</RelativeLayout>
